Load PolicyObservationFilter.class from policy file on PathmindHelper startup